--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 body{
    color: #fff;
    background: rgb(26, 26, 26);
-   height: 100vh;
+   overflow: hidden;
+   width: 100%;
    box-shadow: inset  0px 0px 90px 40px #000;
 }
 
@@ -15,7 +16,7 @@ body{
    font-size: 3.5rem;
    text-align: center;
    position: absolute;
-   top: 200px;
+   top: 20%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: #dcdcdc;
@@ -60,6 +61,7 @@ body{
    top: 65%;
    left: 50%;
    transform: translate(-50%, -50%);
+   text-align: center;
 }
 
 #btn{
@@ -131,36 +133,60 @@ button:focus{outline:none}
    margin-left: 20px;
 }
 
-#count {
+.info{
    font-size: 2rem;
-   color: #eea4ab;
    font-weight: bold;
-   text-align: center;
-   margin-top: 50px;
+   margin-top: 30px;
 }
 
-#num, #num2, #num3 {
-   color: #dcdcdc;
-}
-
-footer{
-   position: absolute;
-   bottom: 20px;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   font-size: 1.2rem;
+#count {
+   color: #eea4ab;
+   margin-bottom: 10px;
 }
 
 #streak {
    color: teal;
-   font-size: 2rem;
-   font-weight: bold;
-   margin-top: 10px;
+   margin-bottom: 10px;
 }
 
 #per {
    color: #85b8cb;
-   font-size: 2rem;
-   font-weight: bold;
-   margin-top: 10px;
+}
+
+#num, #num2, #num3 {color: #dcdcdc;}
+
+footer {
+   position: absolute;
+   bottom: 1%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   font-size: 1.2rem;
+   text-align: center;
+}
+
+@media (max-width: 1024px){
+   .header {font-size: 2rem}
+}
+
+@media (max-width: 768px){
+   .info {font-size: 1.5rem}
+
+   footer {
+      font-size: 0.8rem;
+   }
+}
+
+@media (max-width: 500px){
+   #input {
+      width: 70%;
+      font-size: 1.6rem;
+   }
+
+   #btn, #next {font-size: 1rem;}
+
+   #btns {bottom: 10%;}
+
+   .info {font-size: 1.3rem}
+
+   #randomE {font-size: 2rem}
 }
